--- a/css/estilo.css
+++ b/css/estilo.css
@@ -71,12 +71,12 @@ h1,h2,h3,h4,h5,h6
 }
 .icone_carrinho
 {
-    font-size: 20px;
+    font-size: 24px;
     color: #fff;
     height: 20px;
     position: absolute;
-    text-align: center;
-    left: 35px;
+    /* text-align: center; */
+    right: 60px;
     width: 20px;
     
     /* 
@@ -686,8 +686,8 @@ h1,h2,h3,h4,h5,h6
     line-height: 20px;
     position: absolute;
     text-align: center;
-    top: 10px;
-    left: 20px;
+    bottom: 10px;
+    right: 75px;
     width: 20px;
     /* z-index: 2; */
     -webkit-transition-duration: 500ms;
