--- a/css/estilo.css
+++ b/css/estilo.css
@@ -630,36 +630,17 @@ h1,h2,h3,h4,h5,h6
 {
     background-color: #3a3a3a;
 }
-.form input
+.form input, .form textarea, .form select
 {
     background-color: #c7c7c7;
     border-color: #e00040;
 }
-.form input:hover:focus
+.form input:hover, .form input:focus, .form textarea:hover, .form textarea:focus, select:hover, .form select:focus
 {
     background-color: #c7c7c7;
     border-color: #e00040;
 }
-.form textarea
-{
-    background-color: #c7c7c7;
-    border-color: #e00040;
-}
-.form textarea:hover:focus
-{
-    background-color: #c7c7c7;
-    border-color: #e00040;
-}
-.form select
-{
-    background-color: #c7c7c7;
-    border-color: #e00040;
-}
-.form select:hover:focus
-{
-    background-color: #c7c7c7;
-    border-color: #e00040;
-}
+
 .pos-preimg_form
 {
     width: 318px; 
