--- a/css/estilo.css
+++ b/css/estilo.css
@@ -162,6 +162,39 @@ h1,h2,h3,h4,h5,h6
     height: 100px;
 }
 
+/* classes de Cadastrar */
+.pos_login
+{
+    background-color: #2c2c2c;
+    height: 500px;
+    width: 500px;
+    margin: auto;
+    margin-top: 80px;
+}
+.input_login
+{
+    margin: auto;
+    height: 45px;
+    width: 375px;
+}
+.input_login span
+{
+    height: 45px;
+    width: 40px;
+    background-color: #b3b3b3;
+}
+.btt-entrar_cadastrar
+{
+    font-size: 21px;    
+    height: 45px;
+}
+.divisao-vertical_login
+{
+    background-color: #fff;
+    width: 2px;
+    height: 100px;
+}
+
 
 /* classes do top */
 .top
@@ -448,6 +481,16 @@ h1,h2,h3,h4,h5,h6
     max-width: 635px;   /*impedir que a imagem ultrapasse das limitações da div */
     max-height: auto;  /*impedir que a imagem ultrapasse das limitações da div */
 }
+.imgs-list-first_dp
+{
+    background-color: red;
+    height: 100px;
+    width: 150px;
+    float: left;
+    text-align: center;
+    line-height: 100px;
+    margin-top: 15px;
+}
 .imgs-list_dp
 {
     background-color: red;
@@ -457,7 +500,7 @@ h1,h2,h3,h4,h5,h6
     text-align: center;
     line-height: 100px;
     margin-top: 15px;
-    margin-left: 7px;
+    margin-left: 12px;
 }
 
 .quantidade-config_dp /* Configuração geral da area do botao 'quantidade' */
@@ -647,6 +690,14 @@ h1,h2,h3,h4,h5,h6
 .bttMenos /* muda a cor direita da borda do botao 'bttmenos' */
 {
     border-right-color: #585656;
+}
+.bttMais a/* muda a cor esquerda da borda do botao 'bttmais' */
+{
+    color: inherit;
+}
+.bttMenos a/* muda a cor direita da borda do botao 'bttmenos' */
+{
+    color: inherit;
 }
 
 
