--- a/css/estilo.css
+++ b/css/estilo.css
@@ -163,6 +163,24 @@ h1,h2,h3,h4,h5,h6
 }
 
 /* classes de Cadastrar */
+.img_cadastrar
+{
+    width: 180px;
+    height: 160px;
+    border-radius: 100%;
+}
+.input_cadastrar
+{
+    width: 180px;
+    height: 160px;
+    background-color: #a30935;
+    border-radius: 100%;
+}
+.icone-editar_cadastrar
+{
+    font-size: 45px;
+    line-height: 140px;
+}
 .pos_cadastrar
 {
     background-color: #2c2c2c;
